# pmd85console

./: AUTHORS  README.md  pmd85.service  run.sh
buster/: README.md  pmd85.service  sim_core.c  sim_display.c
emulator/: GPMD85emu.cpp  Makefile.am  README.md  globals.h
emulator/gui/: StatusBar.cpp  UserInterface.cpp  UserInterfaceData.cpp  UserInterfaceData.h
emulator/res/: Makefile.am  default.conf
emulator/rom/: Makefile.am  rom-list.txt
emulator/src/: Emulator.cpp  Emulator.h  IifTape.cpp  IifTimer.cpp  Makefile.am  PeripheralDevice.h  ScreenPMD85.cpp  ScreenPMD85.h  Settings.cpp  SystemPIO.cpp  SystemPIO.h
game/: games-vbg.p32  games-vbg.ptp
menu/: amiberry_gfx.cpp  amiberry_gfx.h  build  build.sh  menu.cpp  screen.cpp  sdl_menu  sdl_menu.cpp  thread.h
openscad/: README.md  fc.scad  keyboard.stl  keyboard_black_0.15mm_PLA_0.57m_MK3_19m.gcode  mod.scad  pmd85.scad  pmd85_bottom.stl  pmd85_bottom_grey_0.15mm_PLA_4.9m_MK3_1h27m.gcode  pmd85_top.scad  pmd85_top.stl  pmd85_top_back_grey_0.15mm_PLA_7.5m_MK3_2h41m.gcode  pmd85_top_side_grey_0.15mm_PLA_9.7m_MK3_4h33m.gcode  rpi.scad  rpi1Aplus.scad
raspberry/: firewall  net-start  net-stop  pmd85.service
res/: default.conf
rom/: Makefile.am  rom-list.txt
simpmd/: ABOUT  CREDITS  FAQ  INSTALL  Makefile  README
simpmd-develop/: INSTALL  Makefile  README
simpmd-develop/doc/: Doxyfile  Makefile
simpmd-develop/src/: Makefile  sim_common.h  sim_console.c  sim_core.c  sim_display.c  (+5 more)
test/: build  screen.cpp
theme-pmd85/: pmd85.plymouth  pmd85.script  theme-pmd85.plymouth  theme-pmd85.script
(+121 files in other folders)
