# GPMD85emu automake
# mborik, 10/2011

AUTOMAKE_OPTIONS = foreign
ROM = \
	basic1.rmm \
	basic2.rmm \
	basic2A.rmm \
	basic3.rmm \
	booter2-pmd85-pmd32.rmm \
	demo0.rmm \
	demo0-c.rmm \
	kli2.rmm \
	monit1.rom \
	monit2.rom \
	monit2A.rom \
	monit3.rom \
	wurmi.rmm

pkgdata_DATA = $(ROM)

EXTRA_DIST = $(ROM) rom-list.txt

